@@ -5,7 +5,6 @@ DEADLINES
 DESIGN
 
 HIGH
-- view isn't reset properly when replaying a challenge
 - PTP challenge ranges: rise=(-5,5), run=(-5,5), x1=(-5,5), y1=(-5,5)
 - Game: generate challenges for levels 5-6
 
